Resolve alignment issus

--- a/css/main.css
+++ b/css/main.css
@@ -773,16 +773,15 @@ span.magnifying-glass {
   background-color: #444; }
 
 .settings-info {
-  color: blue;
-  display: inline-block;
-  margin: 0; }
+  display: inline-block; }
 
 /* The switch - the box around the slider */
 .switch {
   position: relative;
   display: inline-block;
-  width: 60px;
-  height: 25px; }
+  vertical-align: text-top;
+  width: 50px;
+  height: 24px; }
 
 /* Hide default HTML checkbox */
 .switch input {
