--- a/scss/sections/_message-user-and-settings.scss
+++ b/scss/sections/_message-user-and-settings.scss
@@ -77,18 +77,18 @@
 }
 
 // Toggle Switch Style
+  // Target the p tag
 .settings-info {
-  color: blue;
   display: inline-block;
-  margin: 0;
 }
 
 /* The switch - the box around the slider */
 .switch {
   position: relative;
   display: inline-block;
-  width: 60px;
-  height: 25px;
+  vertical-align: text-top;
+  width: 50px;
+  height: 24px;
 }
 
 /* Hide default HTML checkbox */
